@@ -64,7 +64,7 @@ Mono_Posix_Stdlib_realloc (void* ptr, mph_size_t size)
 	return realloc (ptr, (size_t) size);
 }
 
-#ifndef PLATFORM_WIN32
+#ifdef HAVE_SETKEY
 int
 Mono_Posix_Syscall_setkey (const char* key)
 {
@@ -72,7 +72,7 @@ Mono_Posix_Syscall_setkey (const char* key)
 	setkey (key);
 	return errno == 0 ? 0 : -1;
 }
-#endif /* ndef PLATFORM_WIN32 */
+#endif /* ndef HAVE_SETKEY */
 
 G_END_DECLS
 
